--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=deposiF
-spring.datasource.url=jdbc:h2:mem:deposiF
+spring.datasource.url=jdbc:h2:mem:deposif
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.springframework.security=TRACE
